--- a/public/styles.css
+++ b/public/styles.css
@@ -3,25 +3,33 @@ body {
   padding: 0;
   margin: 0;
   height: 100%;
-  font-family: "helvetica", sans-serif;
+  font-family: "Merriweather", serif;
   font-size: 18px;
+  background-color: #00000;
+  background: url("universe.jpg");
+  background-size: cover;
 }
-
-a {
-  color: #0741dd;
+h1,
+h2,
+h3,
+h4,
+h5 h6 {
+  font-family: "Montserrat", sans-serif;
 }
-
-.button {
-  display: block;
+body {
 }
-
-.wrapper div {
-  text-align: center;
+.container {
+  width: auto;
+  max-width: 780px;
+  padding: 0 15px;
 }
-
-.wrapper {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.jumbotron {
+  margin-top: 20px;
+}
+.logo {
+  max-width: 200px;
+}
+.footer {
+  background-color: #f5f5f5;
+  font-size: 14px;
 }
