--- a/public/styles.css
+++ b/public/styles.css
@@ -7,8 +7,7 @@ body {
   font-size: 14px;
   font-weight: normal;
   background-color: #00000;
-  background: url("universe.jpg");
-  background-size: cover;
+  background: url("hotel-wallpaper-black.png");
 }
 h1,
 h2,
